--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
@@ -52,7 +52,7 @@
                         <div class="ui calendar" id="calendarFront" style="width:100%">
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
-                                <input type="text"  placeholder="MM/YYYY">
+                                <input type="text"  placeholder="ดด/ปปปป">
                             </div>
                         </div>
                     </div>
