--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int03/int03-1/int3-1-1/int03-1-1.component.html
@@ -65,14 +65,14 @@
             <label class="custom-label-w-20" style="margin-right: 5%;">วันที่จัดเก็บรายได้ ตั้งแต่</label>
             <div class="seven wide field">
               <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="DD/MM/YYYY" value="03/11/2560" readonly="">
+                <input type="text" class="custom-readonly" placeholder="วว/ดด/ปปปป" value="03/11/2560" readonly="">
                 <i class="add to calendar icon"></i>
               </div>
             </div>
             <div class="eight wide field">
               <label>ถึง</label>
               <div class="ui icon input">
-                <input type="text" class="custom-readonly" placeholder="DD/MM/YYYY" value="03/11/2560" readonly="">
+                <input type="text" class="custom-readonly" placeholder="วว/ดด/ปปปป" value="03/11/2560" readonly="">
                 <i class="add to calendar icon"></i>
               </div>
             </div>
