--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int04/int04-1/int04-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int04/int04-1/int04-1.component.html
@@ -49,14 +49,14 @@
             <label class="custom-label-w-20" style="margin-right: 5%;">วันที่</label>
             <div class="seven wide field">
               <div class="ui icon input">
-                <input type="text" placeholder="MM/YYYY" value="09/2560">
+                <input type="text" placeholder="ดด/ปปปป" value="09/2560">
                 <i class="add to calendar icon"></i>
               </div>
             </div>
             <div class="eight wide field">
               <label>ถึง</label>
               <div class="ui icon input">
-                <input type="text" placeholder="MM/YYYY" value="10/2560">
+                <input type="text" placeholder="ดด/ปปปป" value="10/2560">
                 <i class="add to calendar icon"></i>
               </div>
             </div>
