--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-1/int05-1-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1-1/int05-1-1-1.component.html
@@ -22,7 +22,7 @@
                                 <div class="ui input left icon">
                                     <i class="time icon"></i>
                                     <input [(ngModel)]="formModal.dateOfPay" name="dateOfPay" id="dateOfPay" type="text" autofocus="false" [attr.readonly]="null"
-                                        placeholder="dd/MM/yyyy" [attr.required]="true">
+                                        placeholder="วว/ดด/ปปปป" [attr.required]="true">
                                 </div>
                             </div>
                         </div>
@@ -66,7 +66,7 @@
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
                                 <input [(ngModel)]="formModal.dateWithdrawStamp" name="dateWithdrawStamp" id="dateWithdrawStamp" type="text" autocomplete="off"
-                                    [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true" [disabled]="statusSendBack" class="statusSendBack">
+                                    [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true" [disabled]="statusSendBack" class="statusSendBack">
                             </div>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
                                 <input [(ngModel)]="formModal.dateDeliverStamp" name="dateDeliverStamp" id="dateDeliverStamp" type="text" autocomplete="off"
-                                    [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                                    [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
                             </div>
                         </div>
                     </div>
@@ -112,7 +112,7 @@
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
                                 <input [(ngModel)]="formModal.fivePartDate" name="fivePartDate" id="fivePartDate" type="text" autocomplete="off" [attr.readonly]="null"
-                                    placeholder="dd/MM/yyyy" [attr.required]="true">
+                                    placeholder="วว/ดด/ปปปป" [attr.required]="true">
                             </div>
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
                                 <input [(ngModel)]="formModal.stampCheckDate" name="stampCheckDate" id="stampCheckDate" type="text" autofocus="false" [attr.readonly]="null"
-                                    placeholder="dd/MM/yyyy" [attr.required]="true" [disabled]="statusPay" class="statusPay">
+                                    placeholder="วว/ดด/ปปปป" [attr.required]="true" [disabled]="statusPay" class="statusPay">
                             </div>
                         </div>
                     </div>
