--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-1/int05-1-1/int05-1-1.component.html
@@ -59,7 +59,7 @@
         <div class="ui calendar width100" id="dateF">
           <div class="ui input left icon">
             <i class="time icon"></i>
-            <input name="dateForm" type="text" id="dateForm" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+            <input name="dateForm" type="text" id="dateForm" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
           </div>
         </div>
       </div>
@@ -71,7 +71,7 @@
           <div class="ui calendar width100" id="dateT">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+              <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -155,7 +155,7 @@
             <div class="ui input left icon">
               <i class="time icon"></i>
               <input [(ngModel)]="formModal.dateOfPay" name="dateOfPay" id="dateOfPay" type="text" autofocus="false" [attr.readonly]="null"
-                placeholder="dd/MM/yyyy" [attr.required]="true">
+                placeholder="วว/ดด/ปปปป" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -178,7 +178,7 @@
           <label>หน่วยงาน / ผู้ประกอบการ</label>
         </div>
         <div class="four wide field ">
-          <input [(ngModel)]="formModal.departmentName" id="departmentName" name="departmentName" type="text" placeholder="dd/mm/yyyy">
+          <input [(ngModel)]="formModal.departmentName" id="departmentName" name="departmentName" type="text" placeholder="วว/ดด/ปปปป">
         </div>
         <div class="eight wide field "></div>
       </div>
@@ -199,7 +199,7 @@
             <div class="ui input left icon">
               <i class="time icon"></i>
               <input [(ngModel)]="formModal.dateWithdrawStamp" name="dateWithdrawStamp" id="dateWithdrawStamp" type="text" autocomplete="off"
-                [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -213,7 +213,7 @@
         </div>
         <div class="four wide field ">
           <input [(ngModel)]="formModal.bookNumberDeliverStamp" name="bookNumberDeliverStamp" id="bookNumberDeliverStamp" type="text"
-            placeholder="dd/mm/yyyy">
+            placeholder="วว/ดด/ปปปป">
         </div>
         <div class="three wide field ">
           <label>ลงวันที่ส่งแสตมป์</label>
@@ -223,7 +223,7 @@
             <div class="ui input left icon">
               <i class="time icon"></i>
               <input [(ngModel)]="formModal.dateDeliverStamp" name="dateDeliverStamp" id="dateDeliverStamp" type="text" autocomplete="off"
-                [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -246,7 +246,7 @@
             <div class="ui input left icon">
               <i class="time icon"></i>
               <input [(ngModel)]="formModal.fivePartDate" name="fivePartDate" id="fivePartDate" type="text" autocomplete="off" [attr.readonly]="null"
-                placeholder="dd/MM/yyyy" [attr.required]="true">
+                placeholder="วว/ดด/ปปปป" [attr.required]="true">
             </div>
           </div>
         </div>
@@ -269,7 +269,7 @@
             <div class="ui input left icon">
               <i class="time icon"></i>
               <input [(ngModel)]="formModal.stampCheckDate" name="stampCheckDate" id="stampCheckDate" type="text" autofocus="false" [attr.readonly]="null"
-                placeholder="dd/MM/yyyy" [attr.required]="true">
+                placeholder="วว/ดด/ปปปป" [attr.required]="true">
             </div>
           </div>
         </div>
