--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-5/int06-5.component.html
@@ -62,7 +62,7 @@
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
                                 <input name="dateFrom" type="text" id="dateFrom" autocomplete="off" [attr.readonly]="null"
-                                    placeholder="dd/MM/yyyy" [attr.required]="true">
+                                    placeholder="วว/ดด/ปปปป" [attr.required]="true">
                             </div>
                         </div>
                     </div>
@@ -75,7 +75,7 @@
                                 <div class="ui input left icon">
                                     <i class="time icon"></i>
                                     <input name="dateTo" type="text" id="dateTo" autocomplete="off" [attr.readonly]="null"
-                                        placeholder="dd/MM/yyyy" [attr.required]="true">
+                                        placeholder="วว/ดด/ปปปป" [attr.required]="true">
                                 </div>
                             </div>
                         </div>
