--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-4/int09-1-1-4.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-4/int09-1-1-4.component.html
@@ -197,7 +197,7 @@
         <div class="ui calendar" id="modalDate5" style="width: 100%">
           <div class="ui input left icon">
             <i class="time icon"></i>
-            <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
+            <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
               [attr.required]="true">
           </div>
         </div>
@@ -239,7 +239,7 @@
         <div class="ui calendar" id="modalDate6" style="width: 100%">
           <div class="ui input left icon">
             <i class="time icon"></i>
-            <input type="text" name="date-raw" id="returnDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+            <input type="text" name="date-raw" id="returnDate" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
           </div>
         </div>
       </div>
