--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int10/int10-1/int10-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int10/int10-1/int10-1.component.html
@@ -32,7 +32,7 @@
           <div class="ui calendar" id="calendar">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input type="text" name="date-raw" placeholder="MM/YYYY" autocomplete="off">
+              <input type="text" name="date-raw" placeholder="ดด/ปปปป" autocomplete="off">
             </div>
           </div>
           <div class="two wide  field">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -41,7 +41,7 @@
           <div class="ui calendar" id="calendar1">
             <div class="ui input left icon">
               <i class="time icon"></i>
-              <input type="text" name="date-raw" autocomplete="off" placeholder="MM/YYYY" >
+              <input type="text" name="date-raw" autocomplete="off" placeholder="ดด/ปปปป" >
             </div>
           </div>
         </div>
