--- a/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/analysis/analysis.component.html
@@ -31,7 +31,7 @@
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
                                 <input type="calendar" readonly="" id="dateFrom" name="dateFrom" [attr.required]="true"
-                                    autocomplete="off" placeholder="MMyyyy" formControlName="dateFrom">
+                                    autocomplete="off" placeholder="MMปปปป" formControlName="dateFrom">
                             </div>
                         </div>
                         <div class="three wide field required"><label class="text-right full-width">ถึง</label></div>
@@ -39,7 +39,7 @@
                             <div class="ui input left icon">
                                 <i class="time icon"></i>
                                 <input type="calendar" readonly="" id="dateTo" name="dateTo" [attr.required]="true"
-                                    autocomplete="off" placeholder="dMMyyyy" formControlName="dateTo">
+                                    autocomplete="off" placeholder="dMMปปปป" formControlName="dateTo">
                             </div>
                         </div>
                     </div>
