--- a/workspace/ims-client/src/app/buckwaframework/project/pages/create-form/create-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/create-form/create-form.component.html
@@ -37,14 +37,14 @@
                         <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
                         <div class="eight wide field">
                             <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="11/2560" readonly="">
+                                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="11/2560" readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
                         <div class="eight wide field">
                             <label>-</label>
                             <div class="ui icon input">
-                                <input type="text" class="custom-readonly" placeholder="MM/YYYY" value="12/2560" readonly="">
+                                <input type="text" class="custom-readonly" placeholder="ดด/ปปปป" value="12/2560" readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
