--- a/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
@@ -24,14 +24,14 @@
                         <label class="custom-label-w-25">รอบระยะเวลาการตรวจสอบ</label>
                         <div class="eight wide field">
                             <div class="ui icon input">
-                                <input [(ngModel)]="form.dateFrom" name="dateFrom" type="text" class="custom-readonly" placeholder="MM/yyyy"  readonly="">
+                                <input [(ngModel)]="form.dateFrom" name="dateFrom" type="text" class="custom-readonly" placeholder="ดด/ปปปป"  readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
                         <div class="eight wide field">
                             <label>-</label>
                             <div class="ui icon input">
-                                <input [(ngModel)]="form.dateTo" name="dateTo" type="text" class="custom-readonly" placeholder="MM/yyyy" readonly="">
+                                <input [(ngModel)]="form.dateTo" name="dateTo" type="text" class="custom-readonly" placeholder="ดด/ปปปป" readonly="">
                                 <i class="add to calendar icon"></i>
                             </div>
                         </div>
