--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3.component.html
@@ -52,7 +52,7 @@
                             <div class="ui calendar" id="calendarFront" style="width:100%">
                                 <div class="ui input left icon">
                                     <i class="time icon"></i>
-                                    <input type="text" name="startDate" id="startDate" autocomplete="off" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
+                                    <input type="text" name="startDate" id="startDate" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
                                 </div>
                             </div>
                         </div>
@@ -61,7 +61,7 @@
                             <div class="ui calendar" id="calendarLast" style="width:100%">
                                 <div class="ui input left icon">
                                     <i class="time icon"></i>
-                                    <input type="text" name="endDate" id="endDate" autocomplete="off" [attr.readonly]="null" placeholder="MM/YYYY" [attr.required]="true">
+                                    <input type="text" name="endDate" id="endDate" autocomplete="off" [attr.readonly]="null" placeholder="ดด/ปปปป" [attr.required]="true">
                                 </div>
                             </div>
                         </div>
