--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -127,7 +127,7 @@
                     <div class="sixteen wide field required">
                         <label class="custom-label-w-25">ระหว่างวันที่ </label>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="ดด/ปปปป" value="{{before}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
@@ -136,7 +136,7 @@
                             <label>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
                         </div>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{last}}" class="custom-readonly"
+                            <input type="text" placeholder="ดด/ปปปป" value="{{last}}" class="custom-readonly"
                                 [readonly]="true">
 
                             <button class="ui icon button">
