--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-trader/create-trader.component.html
@@ -28,7 +28,7 @@
                     <div class="three wide field ui calendar" id="calendar">
                         <div class="ui input left icon">
                             <i class="time icon"></i>
-                            <input type="calendar" readonly="" id="calendarraw" name="calendarraw" [attr.required]="true" autocomplete="off" placeholder="ddMMyyyy">
+                            <input type="calendar" readonly="" id="calendarraw" name="calendarraw" [attr.required]="true" autocomplete="off" placeholder="ddMMปปปป">
                         </div>
                     </div>
                     <div class="one wide field"></div>
@@ -38,7 +38,7 @@
                     <div class="three wide field ui calendar" id="calendar1">
                         <div class="ui input left icon">
                             <i class="time icon"></i>
-                            <input type="calendar" readonly="" id="calendar1raw" name="calendar1raw" [attr.required]="true"  autocomplete="off" placeholder="ddMMyyyy">
+                            <input type="calendar" readonly="" id="calendar1raw" name="calendar1raw" [attr.required]="true"  autocomplete="off" placeholder="ddMMปปปป">
                         </div>
                     </div>
                     <div class="one wide field">
