--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/tax-ws-review/tax-ws-review.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/tax-ws-review/tax-ws-review.component.html
@@ -26,7 +26,7 @@
                     <div class="thirteen wide field">
                         <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{before}}" id="before" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="ดด/ปปปป" value="{{before}}" id="before" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
@@ -35,7 +35,7 @@
                             <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
                         </div>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{last}}" id="last" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="ดด/ปปปป" value="{{last}}" id="last" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
