--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int09/int09-1/int09-1-1/int09-1-1-3/int09-1-1-3.component.html
@@ -129,7 +129,7 @@
             <div class="ui calendar" id="modalDate3" style="width: 100%">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" name="date-raw" id="permissionDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
+                <input type="text" name="date-raw" id="permissionDate" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
                   [attr.required]="true">
               </div>
             </div>
@@ -141,7 +141,7 @@
             <div class="ui calendar" id="modalDate4" style="width: 100%">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" name="date-raw" id="writeDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                <input type="text" name="date-raw" id="writeDate" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
@@ -183,7 +183,7 @@
             <div class="ui calendar" id="modalDate5" style="width: 100%">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy"
+                <input type="text" name="date-raw" id="departureDate" autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป"
                   [attr.required]="true">
               </div>
             </div>
@@ -226,7 +226,7 @@
             <div class="ui calendar" id="modalDate6" style="width: 100%">
               <div class="ui input left icon">
                 <i class="time icon"></i>
-                <input type="text" name="date-raw" id="returnDate"  autocomplete="off" [attr.readonly]="null" placeholder="dd/MM/yyyy" [attr.required]="true">
+                <input type="text" name="date-raw" id="returnDate"  autocomplete="off" [attr.readonly]="null" placeholder="วว/ดด/ปปปป" [attr.required]="true">
               </div>
             </div>
           </div>
