--- a/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/check-receipt-tax/check-receipt-tax.component.html
@@ -14,7 +14,7 @@
                     <div class="four wide field">
                         <label class="custom-label-w-10">เดือน/ปี</label>
                         <div class="ui icon input">
-                            <input type="text" class="custom-readonly" readonly="" placeholder="MM/YYYY" value="ตุลาคม 2560">
+                            <input type="text" class="custom-readonly" readonly="" placeholder="ดด/ปปปป" value="ตุลาคม 2560">
                             <i class="add to calendar icon"></i>
                         </div>
                     </div>
