--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -27,7 +27,7 @@
                     <div class="thirteen wide field">
                         <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{before}}" id="before" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="ดด/ปปปป" value="{{before}}" id="before" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
@@ -36,7 +36,7 @@
                             <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
                         </div>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{last}}" id="last" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="ดด/ปปปป" value="{{last}}" id="last" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
