--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/send-line-user/send-line-user.component.html
@@ -46,7 +46,7 @@
                     <div class="thirteen wide field">
                         <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="ดด/ปปปป" value="{{before}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
@@ -55,7 +55,7 @@
                             <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
                         </div>
                         <div class="four ui action input">
-                            <input type="text" placeholder="MM/YYYY" value="{{last}}" readonly="" class="custom-readonly">
+                            <input type="text" placeholder="ดด/ปปปป" value="{{last}}" readonly="" class="custom-readonly">
                             <button class="ui icon button">
                                 <i class="add to calendar icon"></i>
                             </button>
