--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
@@ -28,7 +28,7 @@
                         <div class="thirteen wide field">
                             <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
                             <div class="four ui action input">
-                                <input type="text" id="before" placeholder="MM/YYYY" value="{{before}}" readonly="" class="custom-readonly">
+                                <input type="text" id="before" placeholder="ดด/ปปปป" value="{{before}}" readonly="" class="custom-readonly">
                                 <button class="ui icon button">
                                     <i class="add to calendar icon"></i>
                                 </button>
@@ -37,7 +37,7 @@
                                 <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
                             </div>
                             <div class="four ui action input">
-                                <input type="text" id="last" placeholder="MM/YYYY" value="{{last}}" readonly="" class="custom-readonly">
+                                <input type="text" id="last" placeholder="ดด/ปปปป" value="{{last}}" readonly="" class="custom-readonly">
                                 <button class="ui icon button">
                                     <i class="add to calendar icon"></i>
                                 </button>
