--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/summary-amount-product-trader/summary-amount-product-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/summary-amount-product-trader/summary-amount-product-trader.component.html
@@ -23,7 +23,7 @@
           <div class="thirteen wide field">
             <label class="custom-label-w-35">ระยะเวลาที่ตรวจสอบ</label>
             <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="01/2559" readonly="" class="custom-readonly">
+              <input type="text" placeholder="ดด/ปปปป" value="01/2559" readonly="" class="custom-readonly">
               <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
@@ -32,7 +32,7 @@
               <label>&nbsp;&nbsp;&nbsp;-&nbsp;&nbsp;&nbsp;</label>
             </div>
             <div class="four ui action input">
-              <input type="text" placeholder="MM/YYYY" value="12/2560" readonly="" class="custom-readonly">
+              <input type="text" placeholder="ดด/ปปปป" value="12/2560" readonly="" class="custom-readonly">
               <button class="ui icon button">
                 <i class="add to calendar icon"></i>
               </button>
