แก้ send-line ตรวจสอบภาษี

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/analyst-basic-data-trader/analyst-basic-data-trader.component.html
@@ -251,7 +251,7 @@
                 
                 <div class="ui grid">
                     <div class="three wide column"></div>
-                    <div class="three wide column"><i class="circle icon"></i> ข้อมูลภาพรวมของพิกัด : {{summary.taxData}}</div>
+                    <div class="five wide column"><i class="circle icon"></i> ข้อมูลภาพรวมของพิกัด : {{summary.taxData}}</div>
                     <div class="eight wide column"> - ภาษีเฉลี่ย : </div>
                 </div>
                 <div class="ui grid">
@@ -260,12 +260,12 @@
                 </div>
                 <div class="ui grid">
                     <div class="three wide column"></div>
-                    <div class="five wide column">  - รายที่มีการชำระภาษี : </div>
+                    <div class="five wide column">  - รายที่มีการชำระภาษี : {{countPay}} ราย</div>
                    
                 </div>
                 <div class="ui grid">
                     <div class="three wide column"></div>
-                    <div class="thirteen wide column"> - รายที่ไม่ชำระภาษี : </div>                   
+                    <div class="thirteen wide column"> - รายที่ไม่ชำระภาษี : {{countNonPay}} ราย</div>                   
                 </div>
                 <div class="ui center aligned grid">
                     <div class="sixteen wide column">
